--- a/YOLOv5v6v7v8_on_Custom_Dataset_with_Roboflow.ipynb
+++ b/YOLOv5v6v7v8_on_Custom_Dataset_with_Roboflow.ipynb
@@ -2,12 +2,12 @@
   "cells": [
     {
       "cell_type": "markdown",
-      "source": [
-        "## Step 1: Get YOLO Ready"
-      ],
       "metadata": {
         "id": "REKLIH8z4atK"
-      }
+      },
+      "source": [
+        "## Step 1: Get YOLO Ready"
+      ]
     },
     {
       "cell_type": "code",
@@ -24,32 +24,37 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "x6k1qCSu0Z_y"
+      },
+      "outputs": [],
       "source": [
         "# clone YOLOv6 repo\n",
         "!git clone https://github.com/meituan/YOLOv6\n",
         "%cd YOLOv6"
-      ],
-      "metadata": {
-        "id": "x6k1qCSu0Z_y"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "KOpcngZG004J"
+      },
+      "outputs": [],
       "source": [
         "# clone YOLOv7 repo\n",
         "!git clone https://github.com/WongKinYiu/yolov7\n",
         "%cd yolov7"
-      ],
-      "metadata": {
-        "id": "KOpcngZG004J"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "yBXOq4AkyPqC"
+      },
+      "outputs": [],
       "source": [
         "# for YOLO v5 v6 v7\n",
         "# install required dependencies\n",
@@ -60,35 +65,30 @@
         "\n",
         "# check pytorch version, CUDA version and GPU model\n",
         "print(f\"Setup complete. Using torch {torch.__version__} ({torch.cuda.get_device_properties(0).name if torch.cuda.is_available() else 'CPU'})\")"
-      ],
-      "metadata": {
-        "id": "yBXOq4AkyPqC"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "GjcQxHil2Qh8"
+      },
+      "outputs": [],
       "source": [
         "# for YOLOv8 only\n",
         "%pip install ultralytics\n",
         "import ultralytics\n",
         "ultralytics.checks()"
-      ],
-      "metadata": {
-        "id": "GjcQxHil2Qh8"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Step 2: Download Dataset"
-      ],
       "metadata": {
         "id": "Rbj-m3EN4x1d"
-      }
+      },
+      "source": [
+        "## Step 2: Download Dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -120,6 +120,11 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "H5ifasBT4XmI"
+      },
+      "outputs": [],
       "source": [
         "# For YOLOv6 only, run above code first, then run this code\n",
         "%cd /content/datasets/Your-Project-Name-1/\n",
@@ -140,21 +145,16 @@
         "# train: /content/datasets/Your-Project-Name-1/images/train\n",
         "# val: /content/datasets/Your-Project-Name-1/images/valid\n",
         "# test: /content/datasets/Your-Project-Name-1/images/test"
-      ],
-      "metadata": {
-        "id": "H5ifasBT4XmI"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Step 3: Train YOLO Model with Dataset"
-      ],
       "metadata": {
         "id": "BNTImbSv5Hjt"
-      }
+      },
+      "source": [
+        "## Step 3: Train YOLO Model with Dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -170,40 +170,40 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# train model YOLOv6\n",
-        "!python tools/train.py --img 640 --batch 32 --epochs 3 --data /content/datasets/Your-Project-Name-1/data.yaml --conf configs/yolov6s_finetune.py"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jAprzgTZ5yHS"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# train model YOLOv6\n",
+        "!python tools/train.py --img 640 640 --batch 32 --epochs 3 --data /content/datasets/Your-Project-Name-1/data.yaml --conf configs/yolov6s_finetune.py"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "bXcGPaNs7cGV"
+      },
+      "outputs": [],
       "source": [
         "# train model YOLOv7\n",
         "!wget https://github.com/WongKinYiu/yolov7/releases/download/v0.1/yolov7.pt\n",
         "!python train.py --workers 1 --device 0 --batch-size 32 --epochs 1 --data /content/datasets/Your-Project-Name-1/data.yaml --img 640 640 --weights 'yolov7.pt' --name yolov7-custom --hyp data/hyp.scratch.custom.yaml"
-      ],
-      "metadata": {
-        "id": "bXcGPaNs7cGV"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# train model YOLOv8\n",
-        "!yolo train model=yolov8n.pt data='/content/datasets/Your-Project-Name-1/data.yaml' epochs=3 imgsz=640"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "OyhZ5Ta5-Ft_"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# train model YOLOv8\n",
+        "!yolo train model=yolov8n.pt data='/content/datasets/Your-Project-Name-1/data.yaml' epochs=3 imgsz=640"
+      ]
     },
     {
       "cell_type": "code",
@@ -220,12 +220,12 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "## Step 4: Predict on Test Dataset"
-      ],
       "metadata": {
         "id": "htOXmgT8AB7w"
-      }
+      },
+      "source": [
+        "## Step 4: Predict on Test Dataset"
+      ]
     },
     {
       "cell_type": "code",
@@ -241,30 +241,35 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# test model YOLOv6\n",
-        "!python tools/infer.py --weights runs/train/exp1/weights/best_ckpt.pt --img 640 --conf 0.25 --source /content/datasets/Your-Project-Name-1/images/test"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "IxfPdxr4Ao9s"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# test model YOLOv6\n",
+        "!python tools/infer.py --weights runs/train/exp1/weights/best_ckpt.pt --img 640 640 --yaml /content/datasets/Your-Project-Name-1/data.yaml --conf 0.25 --source /content/datasets/Your-Project-Name-1/images/test"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# test model YOLOv7\n",
-        "!python detect.py --weights runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source /content/datasets/Your-Project-Name-1/test/images "
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "4-gbVhsCAriu"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# test model YOLOv7\n",
+        "!python detect.py --weights runs/train/exp/weights/best.pt --img 640 --conf 0.25 --source /content/datasets/Your-Project-Name-1/test/images "
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "UNFEaOs6As5p"
+      },
+      "outputs": [],
       "source": [
         "# test model YOLOv8\n",
         "from ultralytics import YOLO\n",
@@ -274,12 +279,7 @@
         "\n",
         "# Predict with the model\n",
         "results = model.predict(source=\"/content/datasets/Your-Project-Name-1/test/images\", conf=0.25, save=True)  # predict on an image"
-      ],
-      "metadata": {
-        "id": "UNFEaOs6As5p"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
@@ -295,49 +295,7 @@
       "outputs": [
         {
           "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
@@ -347,9 +305,7 @@
         },
         {
           "data": {
-            "application/javascript": [
-              "download(\"download_cbafd7b9-8636-41d1-8adc-4bc1f643efcb\", \"best.pt\", 14302773)"
-            ],
+            "application/javascript": "download(\"download_cbafd7b9-8636-41d1-8adc-4bc1f643efcb\", \"best.pt\", 14302773)",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
